--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="logo192.png" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="logo192.png" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -24,19 +22,92 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script type="text/javascript">
-      var __ViewXAppConfig = {
-        settings:{
-          templatePath:'https://my-json-server.typicode.com/repetere/mock-my-json-server/templates',
+  <script type="text/javascript">
+    var __ViewXAppConfig = {
+      settings: {
+        templatePath: 'https://my-json-server.typicode.com/repetere/mock-my-json-server/templates',
+      },
+      customComponents: [
+        // {
+        // name:ComponentName,
+        // format:umd|jsonx,
+        // type:component|library,
+        // umdFilePath:url,
+        // jsonx,
+        // stylesheets:[url,],
+        // }
+        { //https://cdnjs.com/libraries/react-slick
+          name: 'Slider',
+          format: 'umd',
+          type: 'component',
+          umdFilePath: 'https://cdnjs.cloudflare.com/ajax/libs/react-slick/0.25.2/react-slick.js',
+          stylesheets: [
+            'https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css',
+            'https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css',
+          ],
         },
-      };
-    </script>
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <!-- <div id="root"></div> -->
-    <!--
+        {
+          name: 'ReactBootstrap',
+          format: 'umd',
+          type: 'library',
+          umdFilePath: 'https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js',
+          // jsonx,
+          stylesheets: ['https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css', ],
+        },
+        {
+          name: 'sayHello',
+          format: 'jsonx',
+          type: 'component',
+          jsonx: {
+            render: {
+              body: {
+                component: 'div',
+                children: 'HELLO!'
+              }
+            }
+          },
+        }
+      ],
+      customScripts: [
+        'https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js',
+        /*url,*/
+      ],
+      customStyles: [
+        'https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css',
+        /*url,*/
+      ],
+      customFunctions: {
+        /*Function, */
+      },
+      layers: [
+        // loading,
+        // modal,
+        // overlay,
+        // header,
+        // footer,
+        // nav,
+        // error,
+        // root,
+        {
+          order: 100,
+          name: 'root',
+          type: 'applicationRoot',
+        },
+      ],
+    };
+    window.someWindowFunction = function someWindowFunction(input) {
+      console.log('someWindowFunction this', this, {
+        input
+      });
+    }
+  </script>
+  <title>React App</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <!-- <div id="root"></div> -->
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -46,5 +117,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
