--- a/public/index.html
+++ b/public/index.html
@@ -117,6 +117,7 @@
       console.log('someWindowFunction this', this, {
         input
       });
+      return true;
     }
   </script>
   <title>React App</title>
