--- a/public/index.html
+++ b/public/index.html
@@ -102,9 +102,9 @@
       ],
       customFunctions: {
         /*Function, */
-        onLaunch() {
+        /*onLaunch() {
           console.info('custom launch function')
-        },
+        },*/
       },
       layers: [
         // loading,
