adding type information

--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,25 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+        <!-- TODO: REMOVE start -->
+<!-- 
+    <script type="text/javascript" src="temp/debounce.js"></script>
+    <script type="text/javascript" src="temp/templates.js"></script> -->
+    <!-- TODO: REMOVE end -->
   <script type="text/javascript">
     var __ViewXAppConfig = {
+      // application: {//TODO: remove
+      //           state: {
+      //               name: 'VXA Demo',
+      //               version: '0.0.1',
+      //               cartItems:[],
+      //           }
+      //       },//TODO: remove
+      // templates: window.placeholderTemplates.templates,//TODO: remove
       settings: {
         templatePath: 'https://my-json-server.typicode.com/repetere/mock-my-json-server/templates',
+        // hasPreloadedTemplates:true, //TODO:remove
+
         routes: {
           user_login_METHOD: 'GET',
           user_login_mfa_METHOD: 'GET',
