fixed ambiguous types

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
       ],
       settings: {
         templatePath: 'https://my-json-server.typicode.com/repetere/mock-my-json-server/templates',
-        dynamicTemplatePath:'https://my-json-server.typicode.com/repetere/mock-json-db-dynamic',
+        // dynamicTemplatePath:'https://my-json-server.typicode.com/repetere/mock-json-db-dynamic',
         // hasPreloadedTemplates:true, //TODO:remove
         debug: true,
         routes: {
