fixed build issues

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
         // 'https://unpkg.com/hoist-non-react-statics@3.3.2/dist/hoist-non-react-statics.min.js',
         // 'https://unpkg.com/react-hook-form@5.2.0/dist/react-hook-form.umd.js',
       ],
-      // querySelector:'#custom',
+      querySelector:'#custom',
       settings: {
         templatePath: 'https://my-json-server.typicode.com/repetere/mock-my-json-server/templates',
         // dynamicTemplatePath:'https://my-json-server.typicode.com/repetere/mock-json-db-dynamic',
