fix: renaming module to JSONA

--- a/examples/react_bootstrap_app/index.html
+++ b/examples/react_bootstrap_app/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
     <script type="text/javascript">
-        var __ViewXAppConfig = {
+        var __JSONAConfig = {
             settings: {
                 templatePath: 'https://my-json-server.typicode.com/repetere/mock-my-json-server/templates',
                 router: 'hash',
@@ -83,7 +83,7 @@
     <!-- <div id="root"></div> -->
     <script type="text/javascript" src="../../dist/viewx.vma.umd.js"></script>
     <script type="text/javascript">
-        VXA.ViewXApp(window.__ViewXAppConfig);
+        VXA.JSONA(window.__JSONAConfig);
     </script>
 </body>
 
