--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <!-- TODO: REMOVE end -->
   <script type="text/javascript">
     var process={ env:{}}
-    var __ViewXAppConfig = {
+    var __JSONAConfig = {
       // application: {//TODO: remove
       //           state: {
       //               name: 'VXA Demo',
