fix: updated jsonx

--- a/src/examples/basic_jsona_app.html
+++ b/src/examples/basic_jsona_app.html
@@ -10,15 +10,15 @@
     <div id="root"></div>
     <script type="text/javascript">
     const jsonaTemplates = {
-      loading:{
+      // loading:{
 
-        '/:catchall*':{
-          jsonx:{
-            component:"div",
-            children:"loading..."
-          }
-        },
-      },
+      //   '/:catchall*':{
+      //     jsonx:{
+      //       component:"div",
+      //       children:"loading..."
+      //     }
+      //   },
+      // },
       header:{
         __error_404:{
           jsonx:{
@@ -289,12 +289,12 @@
         },
       },
       layers: [
-        {
-          order: 100,
-          name: "loading",
-          system: true,
-          type: "loadingView"
-        },
+        // {
+        //   order: 100,
+        //   name: "loading",
+        //   system: true,
+        //   type: "loadingView"
+        // },
         {
           order: 200,
           name: "modal",
